# mosquitopp_client

./: CMakeLists.txt  README.md  main.cpp  mqtt.cpp
include/: mqtt.h
lib/: CMakeLists.txt  mqtt.cpp
lib/include/: mqtt.h
sample/: CMakeLists.txt
sample/publishAndWaitForResponseWithTimeout/: CMakeLists.txt  main.cpp
sample/subscribeAndReplyAtTheFirstOnly/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  main.cpp
